Updated AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,8 +6,9 @@ an awesome project. Thank you all!
 	Alexander Brock <Brock.Alexander@web.de>
 	Ben Oswald
 	Christian Franke <nobody@nowhere.ws>
+	Enrique Saez
+	Flavia Bastos
 	informancer <informancer@web.de>
-    Flavia Bastos
 	Jason Estibeiro <jasonestibeiro@live.com>
 	Jan Weiß
 	Jonas Große Sundrup <cherti@letopolis.de>
@@ -17,3 +18,4 @@ an awesome project. Thank you all!
 	Team MRMCD
 	Tobias Kunze <rixx@cutebit.de>
 	Oliver Knapp <github@oliverknapp.de>
+	Vishal Sodani <vishalsodani@rediffmail.com>
