--- a/src/pretix/locale/de_Informal/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/de_Informal/LC_MESSAGES/djangojs.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-09-08 21:20+0000\n"
-"PO-Revision-Date: 2016-09-08 23:27+0200\n"
+"POT-Creation-Date: 2016-09-09 13:32+0000\n"
+"PO-Revision-Date: 2016-09-09 15:33+0200\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -54,3 +54,14 @@ msgstr "Unbekannter Fehler."
 #: static/pretixpresale/js/ui/asynctask.js:61
 msgid "We are processing your request…"
 msgstr "Wir verarbeiten deine Anfrage…"
+
+#: static/pretixpresale/js/ui/cart.js:10
+msgid "The items in your cart are no longer reserved for you."
+msgstr "Die Produkte in deinem Warenkorb sind nicht mehr für dich reserviert."
+
+#: static/pretixpresale/js/ui/cart.js:14
+#, javascript-format
+msgid "The items in your cart are reserved for you for one minute."
+msgid_plural "The items in your cart are reserved for you for {num} minutes."
+msgstr[0] "Die Produkte in deinem Warenkorb sind noch eine Minute für dich reserviert."
+msgstr[1] "Die Produkte in deinem Warenkorb sind noch {num} Minuten für dich reserviert."
