Make orderlist and overview filterable by payment_provider (fixing #233)

--- a/src/pretix/locale/de/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/de/LC_MESSAGES/djangojs.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-09-09 13:32+0000\n"
+"POT-Creation-Date: 2016-09-13 20:12+0000\n"
 "PO-Revision-Date: 2016-09-09 15:33+0200\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: \n"
@@ -60,8 +60,9 @@ msgid "The items in your cart are no longer reserved for you."
 msgstr "Die Produkte in Ihrem Warenkorb sind nicht mehr für Sie reserviert."
 
 #: static/pretixpresale/js/ui/cart.js:14
-#, javascript-format
 msgid "The items in your cart are reserved for you for one minute."
 msgid_plural "The items in your cart are reserved for you for {num} minutes."
-msgstr[0] "Die Produkte in Ihrem Warenkorb sind noch eine Minute für Sie reserviert."
-msgstr[1] "Die Produkte in Ihrem Warenkorb sind noch {num} Minuten für Sie reserviert."
+msgstr[0] ""
+"Die Produkte in Ihrem Warenkorb sind noch eine Minute für Sie reserviert."
+msgstr[1] ""
+"Die Produkte in Ihrem Warenkorb sind noch {num} Minuten für Sie reserviert."
