Added Martin to authors list

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,7 @@ an awesome project. Thank you all!
 	Jonas Große Sundrup <cherti@letopolis.de>
 	Kevin Nelson
 	Nathan Mattes
+	Martin Gross <martin@pc-coholic.de>
 	Raphael Michel <mail@raphaelmichel.de>
 	Team MRMCD
 	Tobias Kunze <rixx@cutebit.de>
