--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -5344,7 +5344,7 @@ msgstr ""
 
 #: pretix/presale/templates/pretixpresale/event/order.html:80
 #, python-format
-msgid "You will be able to download your tickets here on %(date)s."
+msgid "You will be able to download your tickets here starting on %(date)s."
 msgstr "Sie können Ihre Tickets hier ab %(date)s herunterladen."
 
 #: pretix/presale/templates/pretixpresale/event/order.html:93
