There was a missing in a sentence
;)

--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -1372,7 +1372,7 @@ msgstr "Ihre Bestellung: %(code)s"
 
 #: pretix/base/services/orders.py:394
 #, python-format
-msgid "Your is about to expire: %(code)s"
+msgid "Your order is about to expire: %(code)s"
 msgstr "Ihre Bestellung läuft bald ab: %(code)s"
 
 #: pretix/base/services/orders.py:414
