Fix typo on Stripe plugin configuration alert.

--- a/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
@@ -4840,7 +4840,7 @@ msgstr "Stripe Checkout"
 msgid ""
 "Please configure a <a href=\"https://dashboard.stripe.com/account/webhooks"
 "\">Stripe Webhook</a> to the following endpoint in order to automatically "
-"cancel orders when a charges are refunded externally."
+"cancel orders when charges are refunded externally."
 msgstr ""
 "Bitte konfiguriere einen <a href=\"https://dashboard.stripe.com/account/"
 "webhooks\">Stripe Webhook</a> zum folgenden Endpunkt, damit Bestellungen "
