--- a/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
@@ -2911,7 +2911,7 @@ msgid ""
 "There are no payment providers available. Please go to the plugin settings "
 "and activate one or more payment plugins."
 msgstr ""
-"Es sind keine Zahlungsmethoden verfügbar. Bitte gehe in die Plugin-"
+"Es sind keine Zahlungsmethoden verfügbar. Bitte gehe in die Erweiterungs-"
 "Einstellungen und aktiviere ein oder mehrere Zahlungsplugins."
 
 #: pretix/control/templates/pretixcontrol/event/permissions.html:8
@@ -3056,8 +3056,8 @@ msgid ""
 "There are no ticket outputs available. Please go to the plugin settings and "
 "activate one or more ticket output plugins."
 msgstr ""
-"Es sind keine Ausgabemethoden verfügbar. Bitte gehe in die Plugin-"
-"Einstellungen und aktiviere ein oder mehrere Ticketausgabe-Plugins."
+"Es sind keine Ausgabemethoden verfügbar. Bitte gehe in die Erweiterungs-"
+"Einstellungen und aktiviere ein oder mehrere Ticketausgabe-Erweiterungen."
 
 #: pretix/control/templates/pretixcontrol/events/create.html:4
 #: pretix/control/templates/pretixcontrol/events/create.html:6
