--- a/src/pretix/locale/de/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/de/LC_MESSAGES/djangojs.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-10-09 11:17+0000\n"
-"PO-Revision-Date: 2016-10-08 22:12+0200\n"
+"POT-Creation-Date: 2016-11-08 19:21+0000\n"
+"PO-Revision-Date: 2016-11-08 20:23+0100\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -46,12 +46,11 @@ msgstr "Gesamtumsatz"
 msgid "Contacting Stripe …"
 msgstr "Kontaktiere Stripe …"
 
-#: static/pretixcontrol/js/ui/main.js:28 static/pretixpresale/js/ui/main.js:44
+#: static/pretixcontrol/js/ui/main.js:28 static/pretixpresale/js/ui/main.js:57
 msgid "Close message"
 msgstr "Schließen"
 
 #: static/pretixcontrol/js/ui/main.js:43
-#: static/pretixpresale/js/ui/asynctask.js:49
 msgid "Unknown error."
 msgstr "Unbekannter Fehler."
 
@@ -63,7 +62,33 @@ msgstr "Sonstige"
 msgid "Count"
 msgstr "Anzahl"
 
-#: static/pretixpresale/js/ui/asynctask.js:61
+#: static/pretixpresale/js/ui/asynctask.js:27
+msgid "Your request has been queued on the server and will now be processed."
+msgstr ""
+"Ihre Anfrage befindet sich beim Server in der Warteschlange und wird nun "
+"verarbeitet."
+
+#: static/pretixpresale/js/ui/asynctask.js:40
+#: static/pretixpresale/js/ui/asynctask.js:74
+msgid "An error of type {code} occured."
+msgstr "Ein Fehler ist aufgetreten. Fehlercode: {code}"
+
+#: static/pretixpresale/js/ui/asynctask.js:43
+msgid ""
+"We currenctly cannot reach the server, but we keep trying. Last error code: "
+"{code}"
+msgstr ""
+"Wir können den Server aktuell nicht erreichen, versuchen es aber weiter. "
+"Letzter Fehlercode: {code}"
+
+#: static/pretixpresale/js/ui/asynctask.js:77
+msgid ""
+"We currenctly cannot reach the server. Please try again. Error code: {code}"
+msgstr ""
+"Wir können den Server aktuell nicht erreichen. Bitte versuchen Sie es noch "
+"einmal. Fehlercode: {code}"
+
+#: static/pretixpresale/js/ui/asynctask.js:92
 msgid "We are processing your request …"
 msgstr "Wir verarbeiten deine Anfrage …"
 
