--- a/AUTHORS
+++ b/AUTHORS
@@ -6,6 +6,7 @@ an awesome project. Thank you all!
 	Alexander Brock <Brock.Alexander@web.de>
 	Ben Oswald
 	Christian Franke <nobody@nowhere.ws>
+	Christopher Dambamuromo <me@chridam.com>
 	Enrique Saez
 	Flavia Bastos
 	informancer <informancer@web.de>
