--- a/src/pretix/locale/de/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/de/LC_MESSAGES/djangojs.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-11-08 19:21+0000\n"
-"PO-Revision-Date: 2016-11-08 20:23+0100\n"
+"POT-Creation-Date: 2016-11-27 18:45+0000\n"
+"PO-Revision-Date: 2016-11-27 19:46+0100\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.8.9\n"
+"X-Generator: Poedit 1.8.11\n"
 
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:53
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:59
@@ -46,7 +46,7 @@ msgstr "Gesamtumsatz"
 msgid "Contacting Stripe …"
 msgstr "Kontaktiere Stripe …"
 
-#: static/pretixcontrol/js/ui/main.js:28 static/pretixpresale/js/ui/main.js:57
+#: static/pretixcontrol/js/ui/main.js:28 static/pretixpresale/js/ui/main.js:99
 msgid "Close message"
 msgstr "Schließen"
 
@@ -63,17 +63,22 @@ msgid "Count"
 msgstr "Anzahl"
 
 #: static/pretixpresale/js/ui/asynctask.js:27
-msgid "Your request has been queued on the server and will now be processed."
+#: static/pretixpresale/js/ui/asynctask.js:62
+msgid ""
+"Your request has been queued on the server and will now be processed. If "
+"this takes longer than two minutes, please contact us or go back in your "
+"browser and try again."
 msgstr ""
-"Ihre Anfrage befindet sich beim Server in der Warteschlange und wird nun "
-"verarbeitet."
+"Ihre Anfrage ist auf dem Server angekommen und wird nun verarbeitet. Wenn "
+"dies länger als zwei Minuten dauert, kontaktieren Sie uns bitte oder gehen "
+"Sie in Ihrem Browser einen Schritt zurück und versuchen es erneut."
 
-#: static/pretixpresale/js/ui/asynctask.js:40
-#: static/pretixpresale/js/ui/asynctask.js:74
+#: static/pretixpresale/js/ui/asynctask.js:41
+#: static/pretixpresale/js/ui/asynctask.js:83
 msgid "An error of type {code} occured."
 msgstr "Ein Fehler ist aufgetreten. Fehlercode: {code}"
 
-#: static/pretixpresale/js/ui/asynctask.js:43
+#: static/pretixpresale/js/ui/asynctask.js:44
 msgid ""
 "We currenctly cannot reach the server, but we keep trying. Last error code: "
 "{code}"
@@ -81,16 +86,30 @@ msgstr ""
 "Wir können den Server aktuell nicht erreichen, versuchen es aber weiter. "
 "Letzter Fehlercode: {code}"
 
-#: static/pretixpresale/js/ui/asynctask.js:77
+#: static/pretixpresale/js/ui/asynctask.js:74
+msgid "The request took to long. Please try again."
+msgstr "Diese Anfrage hat zu lange gedauert. Bitte erneut versuchen."
+
+#: static/pretixpresale/js/ui/asynctask.js:86
 msgid ""
 "We currenctly cannot reach the server. Please try again. Error code: {code}"
 msgstr ""
 "Wir können den Server aktuell nicht erreichen. Bitte versuchen Sie es noch "
 "einmal. Fehlercode: {code}"
 
-#: static/pretixpresale/js/ui/asynctask.js:92
+#: static/pretixpresale/js/ui/asynctask.js:101
 msgid "We are processing your request …"
 msgstr "Wir verarbeiten deine Anfrage …"
+
+#: static/pretixpresale/js/ui/asynctask.js:102
+msgid ""
+"We are currently sending your request to the server. If this takes longer "
+"than one minute, please check your internet connection and then reload this "
+"page and try again."
+msgstr ""
+"Ihre Anfrage wird an den Server gesendet. Wenn dies länger als eine Minute "
+"dauert, prüfen Sie bitte Ihre Internetverbindung. Danach können Sie diese "
+"Seite neu laden und es erneut versuchen."
 
 #: static/pretixpresale/js/ui/cart.js:10
 msgid "The items in your cart are no longer reserved for you."
@@ -103,3 +122,9 @@ msgstr[0] ""
 "Die Produkte in Ihrem Warenkorb sind noch eine Minute für Sie reserviert."
 msgstr[1] ""
 "Die Produkte in Ihrem Warenkorb sind noch {num} Minuten für Sie reserviert."
+
+#~ msgid ""
+#~ "Your request has been queued on the server and will now be processed."
+#~ msgstr ""
+#~ "Ihre Anfrage befindet sich beim Server in der Warteschlange und wird nun "
+#~ "verarbeitet."
