Added Jan Felix to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -21,3 +21,4 @@ an awesome project. Thank you all!
 	Tobias Kunze <rixx@cutebit.de>
 	Oliver Knapp <github@oliverknapp.de>
 	Vishal Sodani <vishalsodani@rediffmail.com>
+	Jan Felix Wiebe <git@jfwie.be>
